Routes, file structure, packages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,27 @@
 name: tcb_rek
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
+  auto_route: ^5.0.4
+  bloc: ^8.1.1
+  dio: ^5.0.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.2
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
+  auto_route_generator: ^5.0.3
+  build_runner: ^2.3.3
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  freezed: ^2.3.2
 
 flutter:
   uses-material-design: true
