--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   fluttertoast: ^8.2.1
   freezed_annotation: ^2.2.0
+  get_it: ^7.2.0
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
